--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="E:\web D\Images\IMG-20211027-WA0019-modified.png" alt="My Photo" width="200"></td>
+                <td><img src="Images\IMG-20211027-WA0019-modified.png" alt="My Photo" width="200"></td>
                 <td><h1>Saksham Agrawal</h1>
         <p><em>Student at <strong>AITR</strong></em> <br>
         <em>Owner of <a href="https://www.justdial.com/Dewas/Agrawal-Gift-House-Near-Mahesh-Talkies-Bada-Bazar/9999P7272-7272-101128235050-W1C8_BZDET">AGH</a></em></p>
